# data-structures-and-algorithms

./: README.md  pyproject.toml
Data-Structures/Hashtable/: README.md  pyproject.toml
Data-Structures/graph/: README.md  pyproject.toml
Data-Structures/linked_list/: README.md  README2.md  pyproject.toml
Data-Structures/trees/: README.md  pyproject.toml
array-binary-search/: README.md
array-binary-search/array_binary_search/: array_binary_search.py
array-reverse/: ch1.md  pyproject.toml
array-reverse/array_reverse/: array-reverse.py
array-reverse/tests/: test_array_reverse.py
array-shift/: README.md
array-shift/array_shift/: array_shift.py
challenges/: README.md  pyproject.toml
challenges/IIZip/: README.md
challenges/Insertion_Sort/: BLOG.md  README.md  pyproject.toml
challenges/QueueWithStacks/: README.md  pyproject.toml
challenges/array-binary-search/: pyproject.toml
challenges/array-reverse/: README.md
challenges/array-shift/: pyproject.toml
challenges/fifo_animal_shelter/: README.md  pyproject.toml
challenges/graph_breadth_first/: README.md  pyproject.toml
challenges/graph_breadth_first/graph_breadth_first/: graph_breadth_first.py  queue.py  vertix.py
challenges/graph_breadth_first/tests/: test_graph_breadth_first.py
challenges/graph_business_trip/: README.md  pyproject.toml
challenges/hashmap-tree-intersection/: README.md  pyproject.toml
challenges/hashmap_left_join/: README.md  pyproject.toml
challenges/merge_sort/: BLOG.md  README.md  pyproject.toml
stacks_and_queues/: README.md  pyproject.toml
(+58 files in other folders)
